--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
           name="prompt"
           cols="1"
           rows="1"
-          placeholder="Ask Codex..."
+          placeholder="Ask AJL anything..."
         ></textarea>
         <button type="submit"><img src="assets/send.svg" alt="" /></button>
       </form>
